--- a/.github/workflows/continuous._deployment_on_vercel_prod.yml
+++ b/.github/workflows/continuous._deployment_on_vercel_prod.yml
@@ -2,8 +2,7 @@ name: Vercel Preview Deployment
 env:
   VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
   VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID_PROD }}
-on:
-  worflow_dispatch
+on: workflow_dispatch
 jobs:
   Deploy-Preview:
     runs-on: ubuntu-latest
