--- a/.github/workflows/continuous._deployment_on_vercel.yml
+++ b/.github/workflows/continuous._deployment_on_vercel.yml
@@ -2,10 +2,7 @@ name: Vercel Preview Deployment
 env:
   VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
   VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID_TEST }}
-on:
-  push:
-    branches-ignore:
-      - main
+on: workflow_dispatch
 jobs:
   Deploy-Preview:
     runs-on: ubuntu-latest
